[package]
name = "jito-backrun-example"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.26"
clap = { version = "4", features = ["derive", "env"] }
crossbeam-channel = "0.5.8"
env_logger = "0.9"
futures = "0.3.28"
futures-util = "0.3.28"
histogram = "0.6.9"
jito-protos = { path = "../jito_protos" }
log = "0.4.19"
prost-types = "0.11.9"
rand = "0.8.5"
jito-searcher-client = { path = "../searcher_client" }
solana-client = "1.16"
solana-metrics = "1.16"
solana-sdk = "1.16"
solana-transaction-status = "1.16"
spl-memo = "3.0.1"
thiserror = "1.0.44"
tokio = "1.32"
tonic = { version = "0.9.2", features = [
    "tls",
    "tls-roots",
    "tls-webpki-roots",
] }
