[package]
name = "jito-searcher-client"
version = "0.1.0"
edition = "2021"
description = "Wrapper around the generated gRPC. Adds auth and retry semantics."

[dependencies]
chrono = "0.4.26"
futures = "0.3.28"
futures-util = "0.3.28"
jito-protos = { path = "../jito_protos" }
log = "0.4.19"
rand = "0.8.5"
prost-types = "0.11.9"
serde = "1.0.181"
solana-client = "=1.14.22"
solana-metrics = "=1.14.22"
solana-sdk = "=1.14.22"
solana-transaction-status = "=1.14.22"
thiserror = "1.0.44"
tokio = "~1.14.1"
tonic = "0.8.3"
